Fix issue with logo on about page with dark mode

--- a/pages/about.module.css
+++ b/pages/about.module.css
@@ -12,3 +12,9 @@
   border-bottom: 1px dashed gray;
   padding-bottom: 1em;
 }
+
+@media (prefers-color-scheme: dark) {
+  .logo {
+    filter: invert();
+  }
+}
